tests/NormalTests/paczka1/fuzzy1/69039182.err
Error in line 1: pzWk2RZP A235 36,9
Error in line 4: pzWk2RZP S866 95,9
Error in line 12: pvLxHFmWvw S866 40,4
Error in line 14: zpFTPe A385 269,2
